# requests/order.go
@@ -1,13 +1,24 @@
 package requests
 
-type Item struct {
+type CreateItem struct {
 	ItemCode    string `json:"itemCode"`
 	Description string `json:"description"`
 	Quantity    int    `json:"quantity"`
 }
 
-type Order struct {
-	OrderedAt    string `json:"orderedAt"`
-	CustomerName string `json:"customerName"`
-	Items        []Item `json:"items"`
+type CreateOrder struct {
+	CustomerName string       `json:"customerName"`
+	Items        []CreateItem `json:"items"`
+}
+
+type UpdateItem struct {
+	ItemId      int    `json:"itemId"`
+	ItemCode    string `json:"itemCode"`
+	Description string `json:"description"`
+	Quantity    int    `json:"quantity"`
+}
+
+type UpdateOrder struct {
+	CustomerName string       `json:"customerName"`
+	Items        []UpdateItem `json:"items"`
 }
